This file documents the revision history for the SNClient+ agent.

0.13     Thu Nov 23 22:20:21 CET 2023
         - drop privileges when running node exporter
         - update node exporter to 1.7.0
         - add node exporter to osx packages
         - add check_load plugin
         - improve docs and help pages
         - add folder size support to check_files (#38)
         - add basic promethes metrics
         - check_eventlog: finish implementing
         - fix reading empty config files (#58)
         - fix packaging for debian <= 12

0.12     Tue Nov  7 23:52:33 CET 2023
         - add built-in check_http / check_tcp / check_dns
         - add check_omd check
         - msi windows installer:
           - do not change windows service during updates

0.11     Fri Oct 27 20:27:21 CEST 2023
         - support filter regex syntax: attr ~~ /value/
         - return error if using unknown check arguments
         - add (prometheus) node/windows exporter and custom exporters
         - fix check_drivesize showing wrong disk on linux
         - fix windows installer removing snclient.ini on update

0.10     Sun Oct 22 21:22:47 CEST 2023
         - windows: add firewall on program, not ports
         - add on demand macros
         - add prometheus exporter exporter listener
         - add support for shared listeners

0.09     Sat Oct  7 13:44:18 CEST 2023
         - use shared path as working directory when running external scripts
         - check_network: add name/exclude and speed
         - check_process: fix showing all processes
         - check_drivesize: do not apply default filter if disk is specified


0.08     Thu Sep  7 15:08:07 CEST 2023
         - catch some standard cmd.exe errors
         - skip logrotation if output is not a file
         - make filter keywords are case insensitive
         - improve scripts paths containing spaces
         - add /api/v1/inventory rest path
         - packaging: create logfile folder